# TenutoNotationLanguage

./: .gitignore  Cargo.toml  README.md  Readme.md  api.md  omniscore-specification.md  tenuto-specification.md  test.mid  test.omni  test.ten
src/: ir.rs  lexer.rs  lib.rs  main.rs  midi.rs  parser.rs
tests/: suite.rs
